--- a/templates/room.html
+++ b/templates/room.html
@@ -106,7 +106,7 @@ setInterval(function(){
 
     input[type=submit] {
     width: 100%;
-    background-color: #4CAF50;
+    background-color: #7b3cc2;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -116,7 +116,7 @@ setInterval(function(){
     }
 
     input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #976bc9;
     }
 
     div {
